# duckdb_httpfs_wasm_experiment

./: CMakeLists.txt  HOWTO.md  Makefile  extension_config.cmake  patch.patch  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  _extension_distribution.yml
extension/httpfs/: CMakeLists.txt  CMakeLists.txt.rej  create_secret_functions.cpp  crypto.cpp  hffs.cpp  httpfs.cpp
extension/httpfs/httpfs/: CMakeLists.txt
extension/httpfs/include/: httpfs.hpp  s3fs.hpp
